--- a/projects.html
+++ b/projects.html
@@ -221,7 +221,7 @@
 									<div class="col-20 col-6-medium col-12-small">
 										<section class="box">
 											<p align="center">
-												<img src="images/projects/nspdi.jpg" alt="" style="width:140%" align="middle"></a>
+												<img src="images/projects/nspdi.JPG" alt="" style="width:140%" align="middle"></a>
 												<br><br>At NSPDI, 2017
 											</p>
 										</section>
@@ -229,7 +229,7 @@
 									<div class="col-20 col-6-medium col-12-small">
 										<section class="box">
 											<p align="center">
-											<img src="images/projects/apeiro.jpg" alt="" style="width:140%" /></a>
+											<img src="images/projects/apeiro.JPG" alt="" style="width:140%" /></a>
 											<br>At TIFR, Mumbai
 										</p>
 									</div>
