--- a/projects.html
+++ b/projects.html
@@ -13,44 +13,44 @@
 			<!-- Header -->
 				<section id="header">
 
-					<!-- Logo -->
-						<h1><a href="index.html">Sanket Deshpande</a></h1>
+					<h1><a href="index.html">Sanket Deshpande</a></h1>
 
-					<!-- Nav -->
-						<nav id="nav">
-							<ul>
-								<li><a href="index.html">Home</a></li>
+				<!-- Nav -->
+					<nav id="nav">
+						<ul>
+							<li><a href="index.html">Home</a></li>
 
-								<li class="current">
-									<a href="projects.html">Projects</a>
-									<ul>
-										<li><a href="veto.html">Veto Detector</a></li>
-										<li><a href="pixxel.html">Pixxel</a></li>
-										<li><a href="apeiro.html">Project Apeiro</a></li>
-										<li><a href="hyperloop.html">Hyperloop India</a></li>
-										<li><a href="mudra.html">Project Mudra</a></li>
-										<li><a href="grapes.html">Cosmic ray muon tracking</a></li>
-										<li><a href="antenna.html">Antenna design</a></li>
-										<!--
-										<li>
-											<a href="#">Phasellus consequat</a>
-											<ul>
-												<li><a href="#">Magna phasellus</a></li>
-												<li><a href="#">Etiam dolore nisl</a></li>
-												<li><a href="#">Veroeros feugiat</a></li>
-												<li><a href="#">Nisl sed aliquam</a></li>
-												<li><a href="#">Dolore adipiscing</a></li>
-											</ul>
-										-->
-										</li>
+							<li class="current">
+								<a href="projects.html">Projects & Organisations</a>
+								<!--
+								<ul>
+									<li><a href="veto.html">Veto Detector</a></li>
+									<li><a href="pixxel.html">Pixxel</a></li>
+									<li><a href="apeiro.html">Project Apeiro</a></li>
+									<li><a href="hyperloop.html">Hyperloop India</a></li>
+									<li><a href="mudra.html">Project Mudra</a></li>
+									<li><a href="grapes.html">Cosmic ray muon tracking</a></li>
+									<li><a href="antenna.html">Antenna design</a></li>
+
+									<li>
+										<a href="#">Phasellus consequat</a>
+										<ul>
+											<li><a href="#">Magna phasellus</a></li>
+											<li><a href="#">Etiam dolore nisl</a></li>
+											<li><a href="#">Veroeros feugiat</a></li>
+											<li><a href="#">Nisl sed aliquam</a></li>
+											<li><a href="#">Dolore adipiscing</a></li>
+										</ul>
 									</ul>
+									-->
 
-									<li><a href="publications.html">Publications</a></li>
-									<li><a href="talks.html">Talks</a></li>
-									<li><a href="hobbies.html">Hobbies</a></li>
+							</li>
+								<li><a href="publications.html">Publications</a></li>
+								<li><a href="about.html">Personal</a></li>
 
-							</ul>
-						</nav>
+
+						</ul>
+					</nav>
 					</section>
 
 				<section id="main">
@@ -60,7 +60,7 @@
 		          <div class="col-12">
 
 		            <!-- Portfolio -->
-		              <section>
+
 
 
 		                <div class="row">
@@ -134,7 +134,7 @@
 							<!-- Portfolio -->
 								<section>
 									<header class="major">
-										<h2>Veto Detector for mini-ICAL</h2>
+										<h2>Veto Detector for mini-ICAL</h2><br><i>Graduate Research Student</i>
 									</header>
 								</section>
 								The India-based Neutrino Observatory is a multi-institutional project to develop an underground observatory for non-accelarator based high energy and nuclear physics.
@@ -161,7 +161,7 @@
 							<!-- Portfolio -->
 								<section>
 									<header class="major">
-										<h2>Pixxel</h2>
+										<h2>Pixxel</h2><br><i>Chief Operations Officer</i>
 									</header>
 								</section>
 								At Pixxel, we aim to develop a constellation of nanosatellites which provides a near real-time access to earth imagery, enabling several industries and communities
@@ -187,7 +187,7 @@
 							<!-- Portfolio -->
 								<section>
 									<header class="major">
-										<h2>Project Apeiro</h2>
+										<h2>Project Apeiro</h2><br><i>Team Leader</i>
 									</header>
 								</section>
 								Project Apeiro was a high-altitude balloon-borne experiment to determine cosmic radiation flux in the lower stratospheric regions. This was India's first near-space mission
@@ -221,7 +221,7 @@
 									<div class="col-20 col-6-medium col-12-small">
 										<section class="box">
 											<p align="center">
-												<img src="images/projects/nspdi.JPG" alt="" style="width:140%" align="middle"></a>
+												<img src="images/projects/nspdi.jpg" alt="" style="width:140%" align="middle"></a>
 												<br><br>At NSPDI, 2017
 											</p>
 										</section>
@@ -229,9 +229,10 @@
 									<div class="col-20 col-6-medium col-12-small">
 										<section class="box">
 											<p align="center">
-											<img src="images/projects/apeiro.JPG" alt="" style="width:140%" /></a>
-											<br>At TIFR, Mumbai
-										</p>
+												<img src="images/projects/apeiro.jpg" alt="" style="width:140%" /></a>
+												<br>At TIFR, Mumbai
+											</p>
+										</section>
 									</div>
 
 									<div class="col-20 col-6-medium col-12-small">
@@ -271,9 +272,9 @@
 									<div class="col-20 col-6-medium col-12-small">
 										<section class="box">
 											<p align="center">
-											<img src="images/projects/tifrbf.jpg" alt="" style="width:140%" /></a>
-
-										</p>
+												<img src="images/projects/tifrbf.jpg" alt="" style="width:140%" /></a>
+											</p>
+										</section>
 									</div>
 
 									<div class="col-20 col-6-medium col-12-small">
@@ -292,10 +293,9 @@
 					<div class="row">
 						<div class="col-12">
 
-							<!-- Portfolio -->
 								<section>
 									<header class="major">
-										<h2>Hyperloop India</h2>
+										<h2>Hyperloop India</h2><br><i>Team Member</i>
 									</header>
 								</section>
 								Hyperloop India was a student team with a moto of <i>bringing hyperloop to India</i>. We built the first hyperloop pod prototype in the country and
@@ -323,7 +323,8 @@
 											<p align="center">
 											<img src="images/projects/merlin.jpg" alt="" style="width:120%" /></a>
 
-										</p>
+											</p>
+										</section>
 									</div>
 
 									<div class="col-20 col-6-medium col-12-small">
@@ -331,7 +332,8 @@
 											<p align="center">
 											<img src="images/projects/team.jpg" alt="" style="width:140%" /></a>
 
-										</p>
+											</p>
+										</section>
 									</div>
 
 									<div class="col-20 col-6-medium col-12-small">
@@ -350,6 +352,49 @@
 					</div>
 				</div>
 
+				<div class="container">
+					<div class="row">
+						<div class="col-12">
+
+							<!-- Portfolio -->
+								<section>
+									<header class="major">
+										<h2>Project Mudra</h2> <br><i>Founding Member</i>
+									</header>
+								</section>
+
+								Project Mudra is a startup aimed at developing technologies to aid the visually impaired. As a team of 5 college students, we developed a Braille dicta-teacher
+								device, and its current version is known as "Annie". It uses a Raspberry Pi as the microprocessor and has several actuation and sensing mechanisms for different
+								types of Braille keyboards and slates.<br>
+								One of the key achievements of the startup, when I was there, is winning the UKTI Tech Rocketships Competition 2016. The team presented the device to the Duke and
+								Duchess of Cambridge during their visit to India in 2016.<br><br>
+								<p align="center">
+									<img src="images/projects/mudra.jpg" alt="" style="width:22%"> &emsp; &emsp; &emsp; &emsp; &emsp; <iframe width="480" height="270" src="https://www.youtube.com/embed/Dhfffew5HIc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+								</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="container">
+					<div class="row">
+						<div class="col-12">
+
+							<!-- Portfolio -->
+								<section>
+									<header class="major">
+										<h2>GRAPES-3, TIFR</h2> <br><i>Summer Intern</i>
+									</header>
+								</section>
+
+								The experiment is located at Ooty in India started as a collaboration of the Tata Institute of Fundamental Research, Mumbai, India and the Osaka City University, Osaka, Japan. At present many institutions from India and Japan are in collaboration.
+								GRAPES-3 (Gamma Ray Astronomy PeV EnergieS phase-3) is designed to study cosmic rays with an array of air shower detectors and four large area muon detectors.<br>
+								My project focused on developing probabilistic tracks of muons detected in the large area muon detectors. I used CORSIKA to simulate the cosmic ray shower and CERN ROOT to develop an algorithm which could analyse the recorded data and determine the angle of inclination
+								of a cosmic radiation shower and hence help in identifying the origin of the shower.<br>
+								<a href="https://github.com/birdman550/cosmicrayanalysis" target=" ">Github</a>
+
+						</div>
+					</div>
+				</div>
 
 
 
