--- a/about.html
+++ b/about.html
@@ -1,13 +1,13 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>About me | Sanket Deshpande</title>
+		<title>Publications | Sanket Deshpande</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 
 	</head>
-	<body class="no-sidebar is-preload">
+	<body class="homepage is-preload">
 		<div id="page-wrapper">
 
 			<!-- Header -->
@@ -17,267 +17,102 @@
 						<h1><a href="index.html">Sanket Deshpande</a></h1>
 
 					<!-- Nav -->
-						<nav id="nav">
-							<ul>
-								<li><a href="index.html">Home</a></li>
-								<li class="current"><a href="about.html">About Me</a></li>
-								<li>
-									<a href="sproj.html">Successful Projects</a>
-									<ul>
-										<li><a href="#">Pixxel</a></li>
-										<li><a href="#">Project Apeiro</a></li>
-										<li><a href="#">Hyperloop India</a></li>
-										<li><a href="#">Project Mudra</a></li>
+					<nav id="nav">
+						<ul>
+							<li><a href="index.html">Home</a></li>
 
-										<!--
-										<li>
-											<a href="#">Phasellus consequat</a>
-											<ul>
-												<li><a href="#">Magna phasellus</a></li>
-												<li><a href="#">Etiam dolore nisl</a></li>
-												<li><a href="#">Veroeros feugiat</a></li>
-												<li><a href="#">Nisl sed aliquam</a></li>
-												<li><a href="#">Dolore adipiscing</a></li>
-											</ul>
-										-->
+							<li>
+								<a href="projects.html">Projects & Organisations</a>
+								<!--
+								<ul>
+									<li><a href="veto.html">Veto Detector</a></li>
+									<li><a href="pixxel.html">Pixxel</a></li>
+									<li><a href="apeiro.html">Project Apeiro</a></li>
+									<li><a href="hyperloop.html">Hyperloop India</a></li>
+									<li><a href="mudra.html">Project Mudra</a></li>
+									<li><a href="grapes.html">Cosmic ray muon tracking</a></li>
+									<li><a href="antenna.html">Antenna design</a></li>
 
-										</li>
+									<li>
+										<a href="#">Phasellus consequat</a>
+										<ul>
+											<li><a href="#">Magna phasellus</a></li>
+											<li><a href="#">Etiam dolore nisl</a></li>
+											<li><a href="#">Veroeros feugiat</a></li>
+											<li><a href="#">Nisl sed aliquam</a></li>
+											<li><a href="#">Dolore adipiscing</a></li>
+										</ul>
 									</ul>
+									-->
 
-								<li><a href="right-sidebar.html">Not-so-Successful Projects</a></li>
-								<li><a href="left-sidebar.html">Research</a></li>
-							</ul>
-						</nav>
+							</li>
+								<li><a href="publications.html">Publications</a></li>
+								<li class="current"><a href="about.html">Personal</a></li>
+
+
+						</ul>
+					</nav>
 					</section>
 
-			<!-- Main -->
 				<section id="main">
+					<p align="center">
+						<img src="images/about/Sanket_1.jpg" style="width:30%">
+					</p>
+				</section>
+
+			<!-- Footer -->
+				<section id="footer">
 					<div class="container">
-
-						<!-- Content -->
-							<article class="box post">
-								<center>
-									<img src="images/about/Sanket_1.jpg" style="width:30%" align="middle" alt="" />
-								</center>
-								<header>
-									<h2></h2>
-									<p>Just describing how I swept through life</p>
-								</header>
-								<p>
-									I'm currently living in the lively city of Mumbai, India. I was born in Vadodara, GJ and brought up in Aurangabad, MH.
-									I spent four years at Goa, where I did my undergraduate studies.
-								</p>
-
-								<p>
-
-								</p>
+						<div class="row">
+							<div class="col-8 col-12-medium">
 								<section>
 									<header>
-										<h3>Something else</h3>
+
 									</header>
-									<p>
-										Elementum odio duis semper risus et lectus commodo fringilla. Maecenas sagittis convallis justo vel mattis.
-										placerat, nunc diam iaculis massa, et aliquet nibh leo non nisl vitae porta lobortis, enim neque fringilla nunc,
-										eget faucibus lacus sem quis nunc suspendisse nec lectus sit amet augue rutrum vulputate ut ut mi. Aenean
-										elementum, mi sit amet porttitor lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor
-										sit amet nullam consequat feugiat dolore tempus.
-										Elementum odio duis semper risus et lectus commodo fringilla. Maecenas sagittis convallis justo vel mattis.
-										placerat, nunc diam iaculis massa, et aliquet nibh leo non nisl vitae porta lobortis, enim neque fringilla nunc,
-										eget faucibus lacus sem quis nunc suspendisse nec lectus sit amet augue rutrum vulputate ut ut mi. Aenean
-										elementum, mi sit amet porttitor lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor.
-									</p>
-									<p>
-										Nunc diam iaculis massa, et aliquet nibh leo non nisl vitae porta lobortis, enim neque fringilla nunc,
-										eget faucibus lacus sem quis nunc suspendisse nec lectus sit amet augue rutrum vulputate ut ut mi. Aenean
-										elementum, mi sit amet porttitor lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor
-										sit amet nullam consequat feugiat dolore tempus.
-									</p>
+
 								</section>
+							</div>
+
+							<div class="col-4 col-12-medium">
 								<section>
 									<header>
-										<h3>So in conclusion ...</h3>
-									</header>
-									<p>
-										Nunc diam iaculis massa, et aliquet nibh leo non nisl vitae porta lobortis, enim neque fringilla nunc,
-										eget faucibus lacus sem quis nunc suspendisse nec lectus sit amet augue rutrum vulputate ut ut mi. Aenean
-										elementum, mi sit amet porttitor lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor
-										sit amet nullam consequat feugiat dolore tempus. Elementum odio duis semper risus et lectus commodo fringilla.
-										Maecenas sagittis convallis justo vel mattis.
-									</p>
-								</section>
-							</article>
 
+									</header>
+
+								</section>
+
+							</div>
+
+							<div class="col-4 col-6-medium col-12-small">
+
+
+							</div>
+							<div class="col-4 col-12-medium">
+
+							</div>
+							<div class="col-12">
+
+								<!-- Copyright -->
+									<div id="copyright">
+										<ul class="links">
+											<li>&copy; Sanket Deshpande. All rights reserved.</li>
+										</ul>
+									</div>
+
+							</div>
+						</div>
 					</div>
 				</section>
 
-				<!-- Footer -->
-					<section id="footer">
-						<div class="container">
-							<div class="row">
-								<div class="col-8 col-12-medium">
-									<section>
-										<header>
-											<h2>My calendar</h2>
-										</header>
-										<ul class="dates">
-											<li>
-												<span class="date">Jul <strong>8</strong></span>
-												<h3><a href="#">Travelling back to Mumbai</a></h3>
-												<p>Ending my trip to Bengaluru and getting back to Mumbai</p>
-											</li>
-											<li>
-												<span class="date">Jul <strong>9</strong></span>
-												<h3><a href="#">First day of work</a></h3>
-												<p>Starting work on my thesis project at TIFR Mumbai</p>
-											</li>
-											<!--
-											<li>
-												<span class="date">Jan <strong>15</strong></span>
-												<h3><a href="#">Magna tempus lorem feugiat</a></h3>
-												<p>Dolore consequat sed phasellus lorem sed etiam nullam dolor etiam sed amet sit consequat.</p>
-											</li>
-											<li>
-												<span class="date">Jan <strong>12</strong></span>
-												<h3><a href="#">Dolore tempus ipsum feugiat nulla</a></h3>
-												<p>Feugiat lorem dolor sed nullam tempus lorem ipsum dolor sit amet nullam consequat.</p>
-											</li>
-											<li>
-												<span class="date">Jan <strong>10</strong></span>
-												<h3><a href="#">Blandit tempus aliquam?</a></h3>
-												<p>Feugiat sed tempus blandit tempus adipiscing nisl lorem ipsum dolor sit amet dolore.</p>
-											</li>
-											-->
-										</ul>
-									</section>
-								</div>
+		</div>
 
-								<div class="col-4 col-12-medium">
-									<section>
-										<header>
-											<h2>Reach me here</h2>
-										</header>
-										<h3> sanket@ieee.org </h3>
-										<br>
-										<ul class="social">
-											<li><a class="icon fa-facebook" href="#"><span class="label">Facebook</span></a></li>
-											<li><a class="icon fa-twitter" href="#"><span class="label">Twitter</span></a></li>
-											<!--<li><a class="icon fa-dribbble" href="#"><span class="label">Dribbble</span></a></li>-->
-											<li><a class="icon fa-google-plus" href="#"><span class="label">Google Plus</span></a></li>
-											<li><a class="icon fa-linkedin" href="#"><span class="label">LinkedIn</span></a></li>
-										</ul>
-									</section>
-									<!--
-									<section>
-										<header>
-											<h2>What's this all about?</h2>
-										</header>
-										<a href="#" class="image featured"><img src="images/pic10.jpg" alt="" /></a>
-										<p>
-											This is <strong>Dopetrope</strong> a free, fully responsive HTML5 site template by
-											<a href="http://twitter.com/ajlkn">AJ</a> for <a href="http://html5up.net/">HTML5 UP</a> It's released for free under
-											the <a href="http://html5up.net/license/">Creative Commons Attribution</a> license so feel free to use it for any personal or commercial project &ndash; just don't forget to credit us!
-										</p>
-										<footer>
-											<ul class="actions">
-												<li><a href="#" class="button">Find out more</a></li>
-											</ul>
-										</footer>
-									</section>
-									-->
-								</div>
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.dropotron.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
 
-								<div class="col-4 col-6-medium col-12-small">
-									<!--
-									<section>
-										<header>
-											<h2>Tempus consequat</h2>
-										</header>
-										<ul class="divided">
-											<li><a href="#">Lorem ipsum dolor sit amet sit veroeros</a></li>
-											<li><a href="#">Sed et blandit consequat sed tlorem blandit</a></li>
-											<li><a href="#">Adipiscing feugiat phasellus sed tempus</a></li>
-											<li><a href="#">Hendrerit tortor vitae mattis tempor sapien</a></li>
-											<li><a href="#">Sem feugiat sapien id suscipit magna felis nec</a></li>
-											<li><a href="#">Elit class aptent taciti sociosqu ad litora</a></li>
-										</ul>
-									</section>
-								</div>
-								<div class="col-4 col-6-medium col-12-small">
-									<section>
-										<header>
-											<h2>Ipsum et phasellus</h2>
-										</header>
-										<ul class="divided">
-											<li><a href="#">Lorem ipsum dolor sit amet sit veroeros</a></li>
-											<li><a href="#">Sed et blandit consequat sed tlorem blandit</a></li>
-											<li><a href="#">Adipiscing feugiat phasellus sed tempus</a></li>
-											<li><a href="#">Hendrerit tortor vitae mattis tempor sapien</a></li>
-											<li><a href="#">Sem feugiat sapien id suscipit magna felis nec</a></li>
-											<li><a href="#">Elit class aptent taciti sociosqu ad litora</a></li>
-										</ul>
-									</section>
-									-->
-								</div>
-								<div class="col-4 col-12-medium">
-									<!--
-									<section>
-										<header>
-											<h2>Reach me here</h2>
-										</header>
-										<h3> sanket@ieee.org </h3>
-										<br>
-										<ul class="social">
-											<li><a class="icon fa-facebook" href="#"><span class="label">Facebook</span></a></li>
-											<li><a class="icon fa-twitter" href="#"><span class="label">Twitter</span></a></li>
-											<li><a class="icon fa-dribbble" href="#"><span class="label">Dribbble</span></a></li>
-											<li><a class="icon fa-google-plus" href="#"><span class="label">Google Plus</span></a></li>
-											<li><a class="icon fa-linkedin" href="#"><span class="label">LinkedIn</span></a></li>
-										</ul>
-
-										<ul class="contact">
-											<li>
-												<h3>Address</h3>
-												<p>
-													Untitled Incorporated<br />
-													1234 Somewhere Road Suite<br />
-													Nashville, TN 00000-0000
-												</p>
-											</li>
-											<li>
-												<h3>Mail</h3>
-												<p><a href="#">someone@untitled.tld</a></p>
-											</li>
-											<li>
-												<h3>Phone</h3>
-												<p>(800) 000-0000</p>
-											</li>
-										</ul>
-										-->
-
-								</div>
-								<div class="col-12">
-
-									<!-- Copyright -->
-										<div id="copyright">
-											<ul class="links">
-												<li>&copy; Sanket Deshpande. All rights reserved.</li>
-											</ul>
-										</div>
-
-								</div>
-							</div>
-						</div>
-					</section>
-
-			</div>
-
-			<!-- Scripts -->
-				<script src="assets/js/jquery.min.js"></script>
-				<script src="assets/js/jquery.dropotron.min.js"></script>
-				<script src="assets/js/browser.min.js"></script>
-				<script src="assets/js/breakpoints.min.js"></script>
-				<script src="assets/js/util.js"></script>
-				<script src="assets/js/main.js"></script>
-
-		</body>
-	</html>
+	</body>
+</html>
