--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Publications | Sanket Deshpande</title>
+		<title>Personal | Sanket Deshpande</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -60,7 +60,7 @@
 					</p>
 				</section>
 
-		
+
 			<!-- Footer -->
 				<section id="footer">
 					<div class="container">
