--- a/projects.html
+++ b/projects.html
@@ -58,75 +58,47 @@
 					<div class="container">
 		        <div class="row">
 		          <div class="col-12">
+		          	<div class="row">
 
-		            <!-- Portfolio -->
+                  <div class="col-20 col-6-medium col-12-small">
+                    <section class="box">
+											<br><br>
+                      <img src="images/Logos/tifr.png" alt="" style="width:80%" />
+                    </section>
+                  </div>
 
+                  <div class="col-20 col-6-medium col-12-small">
+                    <section class="box">
+                      <img src="images/Logos/pixxel.png" style="width:90%" alt="" />
+                    </section>
+                  </div>
 
+                  <div class="col-20 col-6-medium col-12-small">
+                    <section class="box">
+											<br>
+												<img src="images/Logos/apeiro.png" alt="" style="width:70%" />
+                    </section>
+                  </div>
 
-		                <div class="row">
-		                  <div class="col-20 col-6-medium col-12-small">
-		                    <section class="box">
-													<br><br>
-		                      <a href="#" class="image featured"><img src="images/Logos/tifr.png" alt="" style="width:80%" /></a>
+                  <div class="col-20 col-6-medium col-12-small">
+                    <section class="box">
+											<br>
+											<img src="images/Logos/mudra.png" alt="" style="width:70%" align="middle">
+                    </section>
+                  </div>
 
-		                    </section>
-		                  </div>
-		                  <div class="col-20 col-6-medium col-12-small">
-		                    <section class="box">
+                  <div class="col-20 col-6-medium col-12-small">
+                    <section class="box">
+											<br><br><br>
+											<img src="images/Logos/hyperloop.png" alt="" style="width:100%" />
+										</section>
+                  </div>
 
-		                      <a href="#" class="image featured"><img src="images/Logos/pixxel.png" style="width:90%" alt="" /></a>
-
-		                    </section>
-		                  </div>
-		                  <div class="col-20 col-6-medium col-12-small">
-		                    <section class="box">
-													<br>
-													<a href="#" class="image featured"><img src="images/Logos/apeiro.png" alt="" style="width:70%" /></a>
-
-		                    </section>
-		                  </div>
-
-		                  <div class="col-20 col-6-medium col-12-small">
-		                    <section class="box">
-													<br>
-													<a href="#" class="image featured"><img src="images/Logos/mudra.png" alt="" style="width:70%" align="middle"></a>
-
-		                    </section>
-		                  </div>
-		                  <div class="col-20 col-6-medium col-12-small">
-		                    <section class="box">
-													<br><br><br>
-													<a href="#" class="image featured"><img src="images/Logos/hyperloop.png" alt="" style="width:100%" /></a>
-
-												</section>
-
-		                  </div>
-
-		                </div>
-
-
-		          </div>
-		          <div class="col-12">
-
+								</div>
 		          </div>
 		        </div>
 		      </div>
-					<!--
-					<p align="center"><a href="veto.html">Veto Detector Design</a>: Simulation and hardware design; Mini ICAL at India-based Neutrino Observatory <br>
-														<br>
-														<a href="pixxel.html">Pixxel</a>: Aiming to design, build and launch India's first earth-observation nanosatellite constellation 	 <br>
-														<br>
-														<a href="apeiro.html">Project Apeiro</a>: Near space experiment to determine cosmic ray flux in lower-stratospheric regions <br>
-														<br>
-														<a href="hyperloop.html">Hyperloop India</a>: Built and tested a Hyperloop pod to participate in SpaceX Pod Competition 2017<br>
-														<br>
-                            <a href="mudra.html">Project Mudra</a>: Braille dicta-teacher device which enables learning, reading and writing with Braille <br>
-														<br>
-                            <a href="grapes.html">Cosmic ray muon tracking</a>: Trajectory plot of cosmic ray muons detected at the GRAPES-3 observatory<br>
-														<br>
-														<a href="antenna.html">Antenna design</a>: Design and simulation of a microstrip patch antenna for compact commercial devices
-          </p>
-				-->
+					
 				<div class="container">
 					<div class="row">
 						<div class="col-12">
