--- a/about.html
+++ b/about.html
@@ -61,98 +61,108 @@
 				</section>
 
 
-			<!-- Footer -->
-				<section id="footer">
-					<div class="container">
-						<div class="row">
-							<div class="col-8 col-12-medium">
-								<section>
-									<header>
-										<h2>My calendar</h2>
-									</header>
-									<ul class="dates">
-										<li>
-											<span class="date">Jul <strong>8</strong></span>
-											<h3><a href="#">Travelling back to Mumbai</a></h3>
-											<p>Ending my trip to Bengaluru and getting back to Mumbai</p>
-										</li>
-										<li>
-											<span class="date">Jul <strong>9</strong></span>
-											<h3><a href="#">First day of work</a></h3>
-											<p>Starting work on my thesis project at TIFR Mumbai</p>
-										</li>
-										<!--
-										<li>
-											<span class="date">Jan <strong>15</strong></span>
-											<h3><a href="#">Magna tempus lorem feugiat</a></h3>
-											<p>Dolore consequat sed phasellus lorem sed etiam nullam dolor etiam sed amet sit consequat.</p>
-										</li>
-										<li>
-											<span class="date">Jan <strong>12</strong></span>
-											<h3><a href="#">Dolore tempus ipsum feugiat nulla</a></h3>
-											<p>Feugiat lorem dolor sed nullam tempus lorem ipsum dolor sit amet nullam consequat.</p>
-										</li>
-										<li>
-											<span class="date">Jan <strong>10</strong></span>
-											<h3><a href="#">Blandit tempus aliquam?</a></h3>
-											<p>Feugiat sed tempus blandit tempus adipiscing nisl lorem ipsum dolor sit amet dolore.</p>
-										</li>
-										-->
-									</ul>
-								</section>
-							</div>
+				<!-- Footer -->
+					<section id="footer">
+						<div class="container">
+							<div class="row">
+								<div class="col-8 col-12-medium">
+									<section>
+										<header>
+											<h2>Monthly calendar</h2>
+										</header>
+										<ul class="dates">
+											<li>
+												<span class="date">Aug <strong>2-6</strong></span>
+												<h3><a href="#">Travelling to Hyderabad</a></h3>
+													<p>Speaking at the BITSians' Day Event at BITS Pilani, Hyderabad</p>
+													<p>Followed by a couple of meetings</p>
+											</li>
 
-							<div class="col-4 col-12-medium">
-								<section>
-									<header>
-										<h2>Reach me here</h2>
-									</header>
-									sanket@ieee.org<br>
-									sanket@pixxel.co.in
-									<br><br>
-									<ul class="social">
-										<li><a class="icon fa-linkedin" href="https://www.linkedin.com/in/sanket550/" target=" "><span class="label">LinkedIn</span></a></li>
-										<li><a class="icon fa-github" href="https://github.com/birdman550/" target=" "><span class="label">Github</span></a></li>
-										<li><a class="icon fa-facebook" href="https://www.facebook.com/sanket96" target=" "><span class="label">Facebook</span></a></li>
-										<li><a class="icon fa-twitter" href="https://twitter.com/birdman9550"><span class="label">Twitter</span></a></li>
-										<!--<li><a class="icon fa-dribbble" href="#"><span class="label">Dribbble</span></a></li>
-										<li><a class="icon fa-google-plus" href="#"><span class="label">Google Plus</span></a></li>-->
+											<li>
+												<span class="date">Aug <strong>9</strong></span>
+												<h3><a href="#"></a></h3>
+													<p>Day trip to Delhi</p>
+													<p>Meetings for Pixxel</p>
+											</li>
 
-									</ul>
-								</section>
+											<!--
+											<li>
+												<span class="date">Jul <strong>9</strong></span>
+												<h3><a href="#">First day of work</a></h3>
+												<p>Starting work on my thesis project at TIFR Mumbai</p>
+											</li>
 
-							</div>
-
-							<div class="col-4 col-6-medium col-12-small">
-
-							</div>
-							<div class="col-4 col-12-medium">
-
-
-							</div>
-							<div class="col-12">
-
-								<!-- Copyright -->
-									<div id="copyright">
-										<ul class="links">
-											<li>&copy; Sanket Deshpande. All rights reserved.</li>
+											<li>
+												<span class="date">Jan <strong>15</strong></span>
+												<h3><a href="#">Magna tempus lorem feugiat</a></h3>
+												<p>Dolore consequat sed phasellus lorem sed etiam nullam dolor etiam sed amet sit consequat.</p>
+											</li>
+											<li>
+												<span class="date">Jan <strong>12</strong></span>
+												<h3><a href="#">Dolore tempus ipsum feugiat nulla</a></h3>
+												<p>Feugiat lorem dolor sed nullam tempus lorem ipsum dolor sit amet nullam consequat.</p>
+											</li>
+											<li>
+												<span class="date">Jan <strong>10</strong></span>
+												<h3><a href="#">Blandit tempus aliquam?</a></h3>
+												<p>Feugiat sed tempus blandit tempus adipiscing nisl lorem ipsum dolor sit amet dolore.</p>
+											</li>
+											-->
 										</ul>
-									</div>
+									</section>
+								</div>
 
+								<div class="col-4 col-12-medium">
+									<section>
+										<header>
+											<h2>Reach me here</h2>
+										</header>
+										sanket@ieee.org<br>
+										sanket@pixxel.co.in
+										<br><br>
+										<ul class="social">
+											<li><a class="icon fa-linkedin" href="https://www.linkedin.com/in/sanket550/" target=" "><span class="label">LinkedIn</span></a></li>
+											<li><a class="icon fa-github" href="https://github.com/birdman550/" target=" "><span class="label">Github</span></a></li>
+											<li><a class="icon fa-facebook" href="https://www.facebook.com/sanket96" target=" "><span class="label">Facebook</span></a></li>
+											<li><a class="icon fa-twitter" href="https://twitter.com/birdman9550"><span class="label">Twitter</span></a></li>
+											<!--<li><a class="icon fa-dribbble" href="#"><span class="label">Dribbble</span></a></li>
+											<li><a class="icon fa-google-plus" href="#"><span class="label">Google Plus</span></a></li>-->
+
+										</ul>
+									</section>
+
+								</div>
+
+								<div class="col-4 col-6-medium col-12-small">
+
+								</div>
+								<div class="col-4 col-12-medium">
+
+
+								</div>
+								<div class="col-12">
+
+									<!-- Copyright -->
+										<div id="copyright">
+											<ul class="links">
+												<li>&copy; Sanket Deshpande. All rights reserved.</li>
+											</ul>
+										</div>
+
+								</div>
 							</div>
 						</div>
-					</div>
-				</section>
+					</section>
 
-		</div>
+			</div>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<!-- Scripts -->
+				<script src="assets/js/jquery.min.js"></script>
+				<script src="assets/js/jquery.dropotron.min.js"></script>
+				<script src="assets/js/browser.min.js"></script>
+				<script src="assets/js/breakpoints.min.js"></script>
+				<script src="assets/js/util.js"></script>
+				<script src="assets/js/main.js"></script>
 
-	</body>
-</html>
+		</body>
+	</html>
