--- a/index.html
+++ b/index.html
@@ -226,20 +226,30 @@
 							<div class="col-8 col-12-medium">
 								<section>
 									<header>
-										<h2>My calendar</h2>
+										<h2>Monthly calendar</h2>
 									</header>
 									<ul class="dates">
 										<li>
-											<span class="date">Jul <strong>8</strong></span>
-											<h3><a href="#">Travelling back to Mumbai</a></h3>
-											<p>Ending my trip to Bengaluru and getting back to Mumbai</p>
+											<span class="date">Aug <strong>2-6</strong></span>
+											<h3><a href="#">Travelling to Hyderabad</a></h3>
+												<p>Speaking at the BITSians' Day Event at BITS Pilani, Hyderabad</p>
+												<p>Followed by a couple of meetings</p>
 										</li>
+
+										<li>
+											<span class="date">Aug <strong>9</strong></span>
+											<h3><a href="#"></a></h3>
+												<p>Day trip to Delhi</p>
+												<p>Meetings for Pixxel</p>
+										</li>
+
+										<!--
 										<li>
 											<span class="date">Jul <strong>9</strong></span>
 											<h3><a href="#">First day of work</a></h3>
 											<p>Starting work on my thesis project at TIFR Mumbai</p>
 										</li>
-										<!--
+
 										<li>
 											<span class="date">Jan <strong>15</strong></span>
 											<h3><a href="#">Magna tempus lorem feugiat</a></h3>
