--- a/index.html
+++ b/index.html
@@ -231,15 +231,14 @@
 									<ul class="dates">
 										<li>
 											<span class="date">Aug <strong>2-6</strong></span>
-											<h3><a href="#">Travelling to Hyderabad</a></h3>
+											<h3>Travelling to Hyderabad</h3>
 												<p>Speaking at the BITSians' Day Event at BITS Pilani, Hyderabad</p>
 												<p>Followed by a couple of meetings</p>
 										</li>
 
 										<li>
 											<span class="date">Aug <strong>9</strong></span>
-											<h3><a href="#"></a></h3>
-												<p>Day trip to Delhi</p>
+											<h3>Day trip to Delhi</h3>
 												<p>Meetings for Pixxel</p>
 										</li>
 
