--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 								<!-- Portfolio -->
 								<section>
 									<header class="major">
-										<h2>Features</h2>
+										<h2>Featured At</h2>
 									</header>
 								</section>
 
