--- a/projects.html
+++ b/projects.html
@@ -6,6 +6,15 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-36612977-3"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'UA-36612977-3');
+		</script>
+
 	</head>
 	<body class="homepage is-preload">
 		<div id="page-wrapper">
@@ -98,7 +107,7 @@
 		          </div>
 		        </div>
 		      </div>
-					
+
 				<div class="container">
 					<div class="row">
 						<div class="col-12">
