added basic info

--- a/about.html
+++ b/about.html
@@ -64,8 +64,37 @@
 
 				<section id="main">
 					<p align="center">
-						<img src="images/about/Sanket_1.jpg" style="width:30%">
+						<a href="https://drive.google.com/file/d/0B2t98UPTg8WtSkJjN0U4Vnc4SEk/view?usp=sharing" target=" ">Resume</a>
 					</p>
+					<div class="row">
+					  <div class="column">
+							<p align="center">
+								<img src="images/about/Sanket_1.jpg" style="width:42%">
+							</p>
+						</div>
+					  <div class="column">
+							I was born on 6th July 1996 in <a href="https://en.wikipedia.org/wiki/Vadodara" target=" ">Vadodara</a>, GJ, India and<br>
+							I grew up in the historical city of <a href="https://aurangabad.gov.in/" target=" ">Aurangabad</a>, MH, India<br>
+							where I attended <a href="http://www.cambridge-aurangabad.com/" target=" "> Cambridge School</a> till grade 10 (2012),<br>
+							and <a href="http://www.sbscience.org/" target=" ">SB Science College</a> for grades 11 and 12 (2013-14).<br>
+							I moved to Goa in 2014 to pursue college at <a href="http://www.bits-pilani.ac.in/goa/" target=" ">BITS Pilani, Goa campus</a>.<br>
+							I currently stay in Mumbai.<br>
+							<br>
+							I like to travel and I enjoy hiking.<br>
+							My passport has visited 9 countries so far.<br>
+							<br>
+							Theory can be learnt only when put to practice.<br>
+							I have a strong opinion for vocational education.<br>
+							Education should be made more practical, less theoretical.<br>
+							If something doesn't work in the real world, it doesn't work at all.<br>
+
+
+						</div>
+					</div>
+					<p align="center">
+						This page is always under construction. Please reach out if you have ideas about improving it.
+					</p>
+
 				</section>
 
 
@@ -81,15 +110,14 @@
 										<ul class="dates">
 											<li>
 												<span class="date">Aug <strong>2-6</strong></span>
-												<h3><a href="#">Travelling to Hyderabad</a></h3>
+												<h3>Travelling to Hyderabad</h3>
 													<p>Speaking at the BITSians' Day Event at BITS Pilani, Hyderabad</p>
 													<p>Followed by a couple of meetings</p>
 											</li>
 
 											<li>
 												<span class="date">Aug <strong>9</strong></span>
-												<h3><a href="#"></a></h3>
-													<p>Day trip to Delhi</p>
+												<h3>Day trip to Delhi</h3>
 													<p>Meetings for Pixxel</p>
 											</li>
 
@@ -125,6 +153,7 @@
 										<header>
 											<h2>Reach me here</h2>
 										</header>
+										C130, TIFR, Navy Nagar, Colaba, Mumbai, MH, India. <br><br>
 										sanket@ieee.org<br>
 										sanket@pixxel.co.in
 										<br><br>
