--- a/projects.html
+++ b/projects.html
@@ -134,11 +134,11 @@
 								I have been troubleshooting the CAEN DT5702 32-ch SiPM readout board which was supposed to be used for characterizing the detector setup. But, the module had to be sent back to CAEN for repairs and has a long turn-around.
 								I decided to build my own SiPM readout board instead. TIFR plans to use this for science demonstration purposes as well. Hence, simple components (in terms of footprint, availability and cost) have been used.
 								The schematics and PCB designs are now ready and we're waiting for the PCB to get manufactured in the foundry.
-								<p align="center"> <img src="images/projects/SiPM RdOut Top.jpg" style="width:40%"> <br>
+								<p align="center"> <img src="images/projects/SiPM_RdOut_Top.jpg" style="width:40%"> <br>
 									<i>The PCB top view</i>
 								</p>
 
-								<p align="center"> <img src="images/projects/SiPM RdOut Orthogonal.jpg" style="width:40%"> <br>
+								<p align="center"> <img src="images/projects/SiPM_RdOut_Orthogonal.jpg" style="width:40%"> <br>
 									<i>The PCB Orthogonal view</i>
 								</p>
 
