--- a/projects.html
+++ b/projects.html
@@ -131,9 +131,9 @@
 									<i>The mini-ICAL detector</i>
 								</p>
 
-								I have been troubleshooting the CAEN DT5702 32-ch SiPM readout board which was supposed to be used for characterizing the detector setup. But, the module had to be sent back to CAEN for repairs and has a long turn-around.
+								I have been troubleshooting the CAEN DT5702 32-ch SiPM readout board which was supposed to be used for characterizing the detector setup. But, the module had to be sent back to CAEN for repairs and has a long turn-around period.
 								I decided to build my own SiPM readout board instead. TIFR plans to use this for science demonstration purposes as well. Hence, simple components (in terms of footprint, availability and cost) have been used.
-								The schematics and PCB designs are now ready and we're waiting for the PCB to get manufactured in the foundry.
+								The schematics and PCB designs are now ready and we're waiting for PCB fabrication.
 								<p align="center"> <img src="images/projects/SiPM_RdOut_Top.JPG" style="width:40%"> <br>
 									<i>The PCB top view</i>
 								</p>
