--- a/projects.html
+++ b/projects.html
@@ -63,7 +63,7 @@
 					</section>
 
 				<section id="main">
-
+				<!--
 					<div class="container">
 		        <div class="row">
 		          <div class="col-12">
@@ -107,6 +107,26 @@
 		          </div>
 		        </div>
 		      </div>
+				-->
+
+				<div class="container">
+					<div class="row">
+						<div class="col-12">
+
+							<!-- Portfolio -->
+								<section>
+									<header class="major">
+										<h2>Atomionics</h2><br>
+										<img src="images/Logos/atomionics.png" style="width:10%" alt="" /><br>
+										<i>Research Assistant (Jan 2019 - current)</i>
+									</header>
+								</section>
+								<h1><i>Startup based in Center for Quantum Technologies (CQT), NUS, developing atom-interferometry based inertial navigation systems.</i></h1><br>
+
+								Constructing a magneto-optical trap for developing a robust, low-power, portable gravimeter.
+						</div>
+					</div>
+				</div>
 
 				<div class="container">
 					<div class="row">
