address & pixxel update

--- a/about.html
+++ b/about.html
@@ -131,9 +131,8 @@
 										<header>
 											<h2>Reach me here</h2>
 										</header>
-										C130, TIFR, Navy Nagar, Colaba, Mumbai, MH, India. <br><br>
-										sanket@ieee.org<br>
-										sanket@pixxel.co.in
+										#01-12, S15, Center for Quantum Technologies, NUS, Singapore <br><br>
+										sanket@ieee.org
 										<br><br>
 										<ul class="social">
 											<li><a class="icon fa-linkedin" href="https://www.linkedin.com/in/sanket550/" target=" "><span class="label">LinkedIn</span></a></li>
