--- a/projects.html
+++ b/projects.html
@@ -189,7 +189,7 @@
 									<header class="major">
 										<h2>Pixxel</h2><br>
 										<img src="images/Logos/pixxel.png" style="width:10%" alt="" /><br>
-										<i>Co-founder (Aug 2018 - current)</i>
+										<i>Co-founder (Aug 2018 - Dec 2018)</i>
 									</header>
 								</section>
 								<h1><i>Startup aimed at acquiring, processing and analysing earth imagery by developing and deploying a constellation of nanosatellites</i></h1><br>
