--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
 					<h2 align="center">Hi, I'm Sanket Deshpande</h2>
 					<p align="center">I'm a final year student at Birla Institute of Technology and Science, Pilani (<a href="http://www.bits-pilani.ac.in/Goa/" target=" ">BITS Pilani</a>)- Goa; <br>
 					pursuing dual degrees in MSc. Physics and BE Electrical and Electronics Engineering. <br>
-					Currently, I'm working on my thesis project with the <a href="http://www.ino.tifr.res.in/ino/" target=" ">India-based Neutrino Observatory</a> (INO) group at<br>
-					Tata Institute of Fundamental Research (TIFR) and also leading the development of a nanosatellite constellation as the COO at <a href="https://pixxel.co.in/" target=" ">Pixxel</a>.</p>
+					Currently, I'm working on my thesis project with <a href="https://atomionics.com" target=" ">Atomionics</a>, an early-stage startup building atom-interferometry based navigation systems.</p>
 					<p align="center">I'm passionate about engineering projects which can positively impact society.<br>
 					Over 4 years of my undergraduate studies, I led a team to conduct India's first student-led near-space mission, <br>
 						helped found a Braille-tech startup, developed a hyperloop pod and gave a TEDx talk. Some interesting pictures of this time: </p>
