--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 				<section id="main">
 					<h2 align="center">Hi, I'm Sanket Deshpande</h2>
 					<p align="center">I'm a final year student at Birla Institute of Technology and Science, Pilani (<a href="http://www.bits-pilani.ac.in/Goa/" target=" ">BITS Pilani</a>)- Goa; <br>
-					pursuing dual degrees in MSc. Physics and BE Electrical and Electronics Engineering. <br>
+					pursuing degrees in MSc. Physics and BE Electrical and Electronics Engineering. <br>
 					Currently, I'm working on my thesis project with <a href="https://atomionics.com" target=" ">Atomionics</a>, an early-stage startup building atom-interferometry based navigation systems.</p>
 					<p align="center">I'm passionate about engineering projects which can positively impact society.<br>
 					Over 4 years of my undergraduate studies, I led a team to conduct India's first student-led near-space mission, <br>
