about and index updated

--- a/about.html
+++ b/about.html
@@ -70,6 +70,7 @@
 					  <div class="column">
 							<p align="center">
 								<img src="images/about/Sanket_1.jpg" style="width:42%">
+								<script async src="https://static.medium.com/embed.js"></script><a class="m-story" data-collapsed="true" href="https://medium.com/@sanketdeshpande/the-future-of-navigation-e96aa0d5187e" target=" ">The Future of Navigation</a>
 							</p>
 						</div>
 					  <div class="column">
@@ -88,14 +89,17 @@
 							Education should be made more practical, less theoretical.<br>
 							If something doesn't work in the real world, it doesn't work at all.<br>
 
-
+							<script async src="https://static.medium.com/embed.js"></script><a class="m-story" data-collapsed="true" href="https://medium.com/@sanketdeshpande/the-future-of-navigation-e96aa0d5187e" target=" ">The Future of Navigation</a>
 						</div>
 					</div>
 					<p align="center">
 						This page is always under construction. Please reach out if you have ideas about improving it.
 					</p>
 
+
+
 				</section>
+
 
 
 				<!-- Footer -->
