updated index page

--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
 
 				<section id="main">
 					<h2 align="center">Hi, I'm Sanket Deshpande</h2>
-					<p align="center">I'm an Electronics Engineer at <a href="https://atomionics.com" target=" ">Atomionics</a>, where we're buiding <br>
-					 cold-atom interferometry based navigation and sensing systems.<br>
-					 I recently graduated from the 'Birla Institute of Technology and Science, Pilani' university in India with degrees in Physics and EE. <br>
+					<p align="center">I'm an Embedded Systems Engineer at <a href="https://atomionics.com" target=" ">Atomionics</a>, where we're buiding <br>
+					 cold-atom interferometry based sensing and navigation systems.<br>
+					 I studied Physics and Electrical Engineering at the <a href="https://www.bits-pilani.ac.in/Goa/" target=" "> Birla Institute of Technology and Science, Pilani </a> university in India. <br>
 
-					<p align="center">I'm passionate about engineering projects which can positively impact society.<br>
-					During my years at university, I led a team to conduct India's first student-led near-space mission, <br>
-						helped found a Braille-tech startup, developed a hyperloop pod and spoke at a TEDx conference. Some interesting pictures of this time: </p>
+					<p align="center">I'm passionate about solving problems involving a confluence of Physics and Engineering.<br>
+					Previously, I led a team to conduct India's first student-led near-space mission, built an airborne <br>
+					NOx measuring instrument with NASA LaRC, helped found a Braille-tech startup, and developed a hyperloop pod. </p>
 
 				<!-- Slideshow container -->
 					<div class="slideshow-container">
@@ -274,7 +274,8 @@
 									<header>
 										<h2>Reach me here</h2>
 									</header>
-									#01-12, S15, Center for Quantum Technologies, NUS, Singapore <br><br>
+									Atomionics Pte. Ltd. <br>
+									#03-01, E-Centre@Redhill, Jln Bukit Merah, Singapore - 159471 <br><br>
 									sanket@ieee.org
 
 									<br><br>
