Projects and Publications updated

--- a/projects.html
+++ b/projects.html
@@ -118,12 +118,15 @@
 									<header class="major">
 										<h2>Atomionics</h2><br>
 										<img src="images/Logos/atomionics.png" style="width:10%" alt="" /><br>
-										<i>Research Assistant (Jan 2019 - current)</i>
+										<i> Embedded Systems Engineer (July 2019 - current)</i> <br>
+										<i>Research Assistant (Jan 2019 - May 2019)</i>
 									</header>
 								</section>
-								<h1><i>Startup based in Center for Quantum Technologies (CQT), NUS, developing atom-interferometry based inertial navigation systems.</i></h1><br>
+								<h1><i>Startup developing cold-atom interferometry based sensing and navigation systems.</i></h1><br>
 
-								Constructing a magneto-optical trap for developing a robust, low-power, portable gravimeter.
+								At Atomionics, we're developing 'Gravio', a portable cold-atom interferometer which will be able to measure gravitational acceleration with high degree of precision and sensitivity.
+								I work on the development of its engineering aspects - laser and locking systems, control systems, microwave frequency generation, etc.
+								As the company's first employee, I set up our atomic physics lab, and have been involved and working on several aspects of the product development process.
 						</div>
 					</div>
 				</div>
