--- a/publications.html
+++ b/publications.html
@@ -65,8 +65,8 @@
 
 				<section id="main">
 
-					<p align="center">Design and Qualification of an Airborne, Cosmic Ray Flux Measurement System, Sanket Deshpande, Lucky Kapoor, Shivangi Kamat, Satyanarayana Bheesette, Dipankar Pal <br>
-                            arXiv:1810.13201 <a href="https://arxiv.org/ftp/arxiv/papers/1810/1810.13201.pdf" target=" ">[pdf] </a></p>
+					<p align="center">Project Apeiro- High Altitude Balloon Payload for Measuring Cosmic Ray Flux, Sanket Deshpande, Lucky Kapoor, Shivangi Kamat, Satyanarayana Bheesette, Dipankar Pal <br>
+                            36th International Cosmic Ray Conference (ICRC) 2019 <a href="https://pos.sissa.it/358/305/pdf" target=" ">[pdf] </a></p>
 
 					<p align="center"><img src="images/Publications/Sanket_EuCAP.jpg" style="width:25%"><br>
                             Dual Band Antenna for Portable Consumer Devices, Shruti Joshi, Sanket Deshpande and Sudeep Baudha <br>
